--- a/contrail-authz-PIP/pom.xml
+++ b/contrail-authz-PIP/pom.xml
@@ -16,6 +16,15 @@
 	<!-- <parent> <groupId>org.ow2.contrail.common</groupId> <artifactId>builder</artifactId> 
 		<version>0.1.0-SNAPSHOT</version> </parent> -->
 	<dependencies>
+		<!-- [KMcC;)] Patch to a working version of saaj - axis2 faults into disallowed 
+			element in Envelope otherwise -->
+		<dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+			<version>1.3.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -44,18 +53,18 @@
 	</properties>
 	<build>
 		<pluginManagement>
-                <plugins>
-			<!-- alesc: this skips all tests! --> 
-        	        <plugin>
-			        <groupId>org.apache.maven.plugins</groupId>
-			        <artifactId>maven-surefire-plugin</artifactId>
-			        <version>2.12.4</version>
-			        <configuration>
-			                <skipTests>true</skipTests>
-		        	</configuration>
-		      </plugin>
-		</plugins>
-	</pluginManagement>
+			<plugins>
+				<!-- alesc: this skips all tests! -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.12.4</version>
+					<configuration>
+						<skipTests>true</skipTests>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.axis2</groupId>
